# lgpd-copilot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/corpus/: README.md  lgpd_corpus.md
eval/: questions.json
src/observability/: trace.py
src/pipeline/: cache.py  rag.py  routing.py  tools.py
src/ui/: streamlit_app.py
tests/: test_smoke.py
